refactor: replaced handelr tests with table driven
